--- a/FakeData.UI/Views/Products/Index.cshtml
+++ b/FakeData.UI/Views/Products/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<FakeData.Model.Models.Product>
+﻿@using GridMvc.Html
+@using FakeData.GridMvc
+@using FakeData.Model.Models
+
+@model IEnumerable<Product>
 
 @{
     ViewBag.Title = "Index";
@@ -9,37 +13,47 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Stock)
-        </th>
-        <th></th>
-    </tr>
+@*<table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Stock)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Stock)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Stock)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>*@
+
+
+@Html.Grid(Model).Columns(i =>
+{
+    i.Add(foo => foo.Category.Name).Titled("Kategori").Filterable(true).SetWidth(110);
+    i.Add(foo => foo.Name).Titled("Ürün").Filterable(true).Sortable(true);
+    i.Add(foo => foo.Price).Titled("Fiyat").Sortable(true);
+    i.Add(foo => foo.Stock).Titled("Stok").Sortable(true);
+}).WithPaging(20).Filterable(true)
