--- a/FakeData.UI/Views/Shared/_Layout.cshtml
+++ b/FakeData.UI/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Gridmvc.css" rel="stylesheet" />
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 </head>
 <body>
@@ -33,8 +34,8 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/gridmvc.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
